Add Timer application and enhance Phaser functionality
- Introduced a new executable 'Timer' for processing phase data and computing time values.
- Updated CMakeLists.txt to include Timer and link necessary libraries.
- Enhanced Phaser's command-line interface to support reading from stdin and writing to stdout.
- Improved error handling and argument parsing in both Phaser and Timer applications.
- Updated documentation within the code to reflect new features and usage instructions.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,14 @@
 /build
 /bin
 /obj
+
+# Ignore data files
+*.csv
+/data/*.txt
+
+# Ignore log files
+*.log
+
+# Ignore temporary files
+*.tmp
+.DS_Store
