--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,23 +1,32 @@
 # Executables
 add_executable(Phaser Phaser.cpp)
-target_link_libraries(Phaser PRIVATE timekeeping_compiler_flags)
+add_executable(Timer Timer.cpp)
 
-install(TARGETS Phaser
+# Link Dependencies
+target_link_libraries(Phaser PRIVATE timekeeping_compiler_flags)
+target_link_libraries(Phaser PRIVATE Boost::multiprecision)
+target_link_libraries(Phaser PRIVATE argparse)
+
+target_link_libraries(Timer PRIVATE Boost::multiprecision)
+target_link_libraries(Timer PRIVATE argparse)
+target_link_libraries(Timer PRIVATE timekeeping_compiler_flags)
+
+# Install the executables
+install(TARGETS Phaser 
+    DESTINATION bin
+)
+install(TARGETS Timer 
     DESTINATION bin
 )
 
-# Include directories for Boost
-link_directories("/opt/homebrew/lib")
-include_directories("/opt/homebrew/include")
 
-# Link Utilities
-add_subdirectory(Utils)
-target_link_libraries(Phaser PRIVATE Timekeeping_Utilities)
-target_link_libraries(Timekeeping_Utilities PRIVATE timekeeping_compiler_flags)
-
-
-# Set the output directory for the executable
+# Set the output directory for the executables
 set_target_properties(Phaser PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin
+)
+set_target_properties(Timer PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
     RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin
     RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin
