Refactor Timer and CMake configurations
- Updated CMakeLists.txt to remove redundant linking of timekeeping_compiler_flags for Timer.
- Modified Timer.cpp to change frequency variables from Freq to Mean_Freq for clarity and consistency.
- Introduced interval_n to track intervals for error calculations in Timer.
- Adjusted output to reflect changes in frequency variable names.
- Changed Timekeeping_Utilities library to use FileAccess.cpp instead of csv.cpp.
- Added a new toolchain file for Raspberry Pi support.
- Created FileAccess.cpp for file handling utilities.

--- a/src/Utils/CMakeLists.txt
+++ b/src/Utils/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Attach Library
 
-add_library(Timekeeping_Utilities "csv.cpp")
+add_library(Timekeeping_Utilities "FileAccess.cpp")
 
 target_link_directories(Timekeeping_Utilities INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
