Refactor CSV handling and add testing executable
- Introduced CsvDataFile and CsvDataFileTimeGroup classes for efficient CSV file access without loading entire files into memory.
- Implemented methods for reading specific rows and updating file lists based on directory contents.
- Removed obsolete csv.cpp and csv.hpp files.
- Added testing executable to validate CSV file reading functionality.
- Updated CMakeLists.txt to include new testing executable and link necessary libraries.
- Enhanced Utils CMakeLists.txt to link with Boost libraries for filesystem and tokenizer functionalities.

--- a/src/Utils/CMakeLists.txt
+++ b/src/Utils/CMakeLists.txt
@@ -1,5 +1,10 @@
 # Attach Library
-
 add_library(Timekeeping_Utilities "FileAccess.cpp")
+
+# Link Dependencies
+target_link_libraries(Timekeeping_Utilities PRIVATE timekeeping_compiler_flags)
+target_link_libraries(Timekeeping_Utilities PRIVATE Boost::filesystem)
+target_link_libraries(Timekeeping_Utilities PUBLIC Boost::tokenizer)
+target_link_libraries(Timekeeping_Utilities PRIVATE argparse)
 
 target_link_directories(Timekeeping_Utilities INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
