--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(Timekeeping VERSION 0.1)
 
 # Set the C++ standard
 add_library(timekeeping_compiler_flags INTERFACE)
-target_compile_features(timekeeping_compiler_flags INTERFACE cxx_std_20)
+target_compile_features(timekeeping_compiler_flags INTERFACE cxx_std_23)
 
 # Add a Configuration Header
 configure_file(TimekeepingConfig.h.in TimekeepingConfig.h)
@@ -15,25 +15,21 @@ install(FILES "${CMAKE_BINARY_DIR}/TimekeepingConfig.h"
 
 
 # External dependencies
-include(FetchContent)
+include(cmake/CPM.cmake)
+include(GNUInstallDirs)
+option(BUILD_SHARED_LIBS "Build shared libraries" NO)
 
 # Include directories for Boost
-set(BOOST_ENABLE_CMAKE ON) # Enable CMake build system for Boost
-FetchContent_Declare(
-  Boost
-  URL https://github.com/boostorg/boost/releases/download/boost-1.88.0/boost-1.88.0-cmake.tar.xz
-  URL_MD5 3edffaacd2cfe63c240ef1b99497c74f #  Optional: Verify the downloaded file
-)
+set(BOOST_URL https://github.com/boostorg/boost/releases/download/boost-1.87.0/boost-1.87.0-cmake.tar.xz)
+set(BOOST_URL_SHA256 7da75f171837577a52bbf217e17f8ea576c7c246e4594d617bfde7fafd408be5)
+# set(BOOST_URL_MD5 3edffaacd2cfe63c240ef1b99497c74f)
 
-# Make Boost available to your project
-FetchContent_MakeAvailable(Boost)
+set(BOOST_INCLUDE_LIBRARIES filesystem headers multiprecision tokenizer)
+CPMAddPackage("gh:ClausKlein/boost-cmake#v1.87.0-rc5")
 
 # ArgParse
-FetchContent_Declare(
-    argparse
-    GIT_REPOSITORY https://github.com/p-ranav/argparse.git
-)
-FetchContent_MakeAvailable(argparse)
+CPMAddPackage("gh:p-ranav/argparse#v3.2")
+
 
 # Include source directory
 add_subdirectory(src)
