Add SrTime module for calculating time deviation between NIST Hydrogen Maser and Silicon3/Strontium clock
- Implemented SrTime.cpp to handle time deviation calculations.
- Introduced argument parsing for configuration file input.
- Added CSV file handling for frequency data.
- Created utility classes for progress bar and CSV file access.
- Removed obsolete FileAccess class and integrated its functionality into new structures.
- Updated CMakeLists.txt to reflect changes in library structure.
- Added tests for CSV group metadata handling.

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@
 /obj
 
 # Ignore data files
+/data
 *.csv
-/data/*.txt
 
 # Ignore log files
 *.log
@@ -15,3 +15,7 @@
 *.tmp
 .DS_Store
 .vscode/
+.cache/
+
+# Ignore documentation files
+/doxy
