--- a/src/Utils/CMakeLists.txt
+++ b/src/Utils/CMakeLists.txt
@@ -1,10 +1,10 @@
 # Attach Library
-add_library(Timekeeping_Utilities "FileAccess.cpp")
+add_library(Utils STATIC 
+    "ProgressBar.cpp"
+    )
 
 # Link Dependencies
-target_link_libraries(Timekeeping_Utilities PRIVATE timekeeping_compiler_flags)
-target_link_libraries(Timekeeping_Utilities PRIVATE Boost::filesystem)
-target_link_libraries(Timekeeping_Utilities PUBLIC Boost::tokenizer)
-target_link_libraries(Timekeeping_Utilities PRIVATE argparse)
+target_link_libraries(Utils PRIVATE timekeeping_compiler_flags)
+target_link_libraries(Utils PUBLIC Boost::date_time)
 
-target_link_directories(Timekeeping_Utilities INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_directories(Utils INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
